syntax = "proto3";

package hippoai.later;

option go_package = "github.com/hippoai/later/_proto";

import "google/api/annotations.proto";

service Later {
  rpc CreateInstance(CreateInstanceInput) returns (CreateInstanceOutput) {
    option (google.api.http) = {
      post: "/create_instance"
      body: "*"
    };
  };
  rpc AbortInstance(AbortInstanceInput) returns (AbortInstanceOutput) {
    option (google.api.http) = {
      post: "/abort_instance"
      body: "*"
    };
  };
  rpc GetInstances(GetInstancesInput) returns (GetInstancesOutput) {
    option (google.api.http) = {
      post: "/get_instances"
      body: "*"
    };
  };
  rpc GetSuccessful(GetInstancesInput) returns (GetInstancesOutput) {
    option (google.api.http) = {
      post: "/get_successful"
      body: "*"
    };
  };
  rpc GetFailed(GetInstancesInput) returns (GetInstancesOutput) {
    option (google.api.http) = {
      post: "/get_failed"
      body: "*"
    };
  };
  rpc GetAborted(GetInstancesInput) returns (GetInstancesOutput) {
    option (google.api.http) = {
      post: "/get_aborted"
      body: "*"
    };
  };
  rpc Stats(StatsInput) returns (StatsOutput) {
    option (google.api.http) = {
      post: "/stats"
      body: "*"
    };
  };
}

message Instance {
  string id = 1;
  string task_name = 2;
  string execution_time = 3;
  bytes parameters = 4;
}

message CreateInstanceInput {
   string task_name = 1;
   string execution_time = 2;
   bytes parameters = 3;
}

message CreateInstanceOutput {
  string instance_id = 1;
}

message AbortInstanceInput {
  string task_name = 1;
  string instance_id = 2;
}

message AbortInstanceOutput {
}

message GetInstancesInput {
  string start = 1;
  string end = 2;
}

message GetInstancesOutput {
  repeated Instance instances = 1;
}

message StatsInput {
}

message StatsOutput {
  string token = 1;
  int64 n_in_memory = 2;
  repeated string tasks = 3;
}
