syntax = "proto3";

package hippoai.later;

option go_package = "github.com/hippoai/later/_proto";

service Mutations {
  rpc CreateInstance(CreateInstanceInput) returns (CreateInstanceOutput) {};
  rpc AbortInstances(AbortInstancesInput) returns (AbortInstancesOutput) {};
  rpc GetInstances(GetInstancesInput) returns (GetInstancesOutput) {};
  rpc Stats(StatsInput) returns (StatsOutput) {};
}

message Instance {
  string id = 1;
  string task_name = 2;
  string execution_time = 3;
  bytes parameters = 4;
}

message Error {
  string message = 1;
}

message CreateInstanceInput {
   string task_name = 1;
   string execution_time = 2;
   bytes parameters = 3;
}

message CreateInstanceOutput {
  string instance_id = 1;
  Error error = 2;
}

message AbortInstancesInput {
  string task_name = 1;
  bytes parameters = 2;
}

message AbortInstancesOutput {
  repeated string instances_ids = 1;
  Error error = 2;
}

message GetInstancesInput {
  string start = 1;
  string end = 2;
}

message GetInstancesOutput {
  repeated Instance instances = 1;
  Error error = 2;
}

message StatsInput {
}

message StatsOutput {
  string token = 1;
  int64 n_in_memory = 2;
  repeated string tasks = 3;
}
