syntax = "proto3";

package hippoai.later;

option go_package = "github.com/hippoai/later/_proto";

import "google/api/annotations.proto";

service Mutations {
  rpc AddInstance(AddInstanceInput) returns (AddInstanceOutput) {
    option (google.api.http) = {
      post: "/add_instance"
      body: "*"
    };
  };
  rpc AbortInstances(AbortInstancesInput) returns (AbortInstancesOutput) {
    option (google.api.http) = {
      post: "/abort_instances"
      body: "*"
    };
  };
  rpc GetInstances(GetInstancesInput) returns (GetInstancesOutput) {
    option (google.api.http) = {
      post: "/get_instances"
      body: "*"
    };
  };
  rpc Stats(StatsInput) returns (StatsOutput) {
    option (google.api.http) = {
      post: "/stats"
      body: "*"
    };
  };
}

message Instance {
  string id = 1;
  string task_name = 2;
  string execution_time = 3;
  string parameters = 4;
}

message Error {
  string message = 1;
}

message AddInstanceInput {
  string token = 1;
  string task_name = 2;
  string execution_time = 3;
  string parameters = 4;
}

message AddInstanceOutput {
  string instance_id = 1;
  Error error = 2;
}

message AbortInstancesInput {
  string token = 1;
  string task_name = 2;
  string parameters = 3;
}

message AbortInstancesOutput {
  repeated Instance instances = 1;
  Error error = 2;
}

message GetInstancesInput {
  string token = 1;
  string start = 2;
  string end = 3;
}

message GetInstancesOutput {
  repeated Instance instances = 1;
  Error erro = 2;
}

message StatsInput {
}

message StatsOutput {
  string token = 1;
  int64 n_in_memory = 2;
  repeated string tasks = 3;
}
